# dvdcompare-scraper

./: README.md  pyproject.toml
.github/workflows/: publish.yml
src/dvdcompare/: cli.py  models.py  parser.py  scraper.py
tests/: test_cli.py  test_parser.py  test_scraper.py
tests/fixtures/: oppenheimer_4k.html  planet_earth_iii_4k.html
